--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,8 +13,21 @@
 }
 
 body {
-    background-image: linear-gradient(180deg, #001011 0%,#001011 40%,#001011 60%, #485563 280%);
-    min-height: 100vh;
+    background: linear-gradient(45deg,#3f4852,#001011,#001011, #4e5864);
+    background-size: 400% 400%;
+    animation: gradient 12s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 img {
@@ -134,7 +147,22 @@ h2 {
     font-weight: 700;
     color:  white;
     margin-top: 20px;
-    margin-bottom: -10px;    
+    margin-bottom: -10px;
+}
+
+.segundo{
+    animation: fadeIn;
+    animation-duration: 2.5s;
+}
+
+.animate__animated.animate__fadeInRight{
+    --animation-duration: 5s;
+}
+.animate__animated.animate__fadeInDown{
+    --animate-duration: 1s;
+}
+.animate__animated.animate__fadeIn {
+    --animate-duration: 2s;
 }
 
 h3 {
