--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,33 @@
+.logosslider {
+  width: 55vw;
+  height: auto;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 150px;
+}
+.logosslider .slide-track {
+  display: flex;
+  animation: scroll 40s linear infinite;
+  -webkit-animation: scroll 40s linear infinite;
+  width: 3600px;
+}
+.logosslider .slide {
+  width: 200px;
+}
+.logosslider .slide img {
+  width: 100%;
+}
+
+@keyframes scroll {
+  0% {
+    -webkit-animation: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-animation: translateX(-1800);
+    transform: translateX(-1800);
+  }
+}
 /* con parametros */
 /* sin parametros */
 .contactomain {
@@ -80,12 +110,12 @@ form {
 }
 
 .input-box > input:focus ~ i {
-  color: crimson;
+  color: #FB3640;
 }
 
 .input-box > input:focus,
 .input-box > textarea:focus {
-  border-bottom: 3px solid crimson;
+  border-bottom: 3px solid #FB3640;
   animation: shake 0.2s;
 }
 
@@ -250,21 +280,30 @@ h2 {
   margin-bottom: -10px;
 }
 
+.hola {
+  animation: fadeInDown;
+  animation-duration: 0.8s;
+}
+
 .segundo {
   animation: fadeIn;
-  animation-duration: 2.5s;
+  animation-duration: 2.8s;
 }
 
 .animate__animated.animate__fadeInRight {
-  --animation-duration: 5s;
+  --animation-duration: 6s;
 }
 
 .animate__animated.animate__fadeInDown {
   --animate-duration: 1s;
 }
 
-.animate__animated.animate__fadeIn {
-  --animate-duration: 2s;
+.titulos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  animation: fadeIn;
+  animation-duration: 2s;
 }
 
 h3 {
@@ -288,7 +327,10 @@ p {
   font-size: 2rem;
   font-weight: 300;
   color: white;
-  margin-bottom: 10px;
+  margin: 50px 80px 50px 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logos {
@@ -305,10 +347,14 @@ i {
 }
 
 /* Footer */
+.containerfoot {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
 footer {
   width: 100%;
-  position: absolute;
-  bottom: 0;
   display: flex;
   justify-content: space-between;
   padding: 5px 180px;
