--- a/scss/utilidades/_mixin.scss
+++ b/scss/utilidades/_mixin.scss
@@ -7,6 +7,8 @@
 
 /* sin parametros */
 
-@mixin flex {
-    
+@mixin flextitulos {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
 }
