--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,33 @@
 .logosslider {
-  width: 55vw;
+  width: 80vw;
   height: auto;
   margin: auto;
   overflow: hidden;
   margin-top: 150px;
+  mask-image: linear-gradient(90deg, transparent, #fff 20%, #fff 80%, transparent);
 }
 .logosslider .slide-track {
   display: flex;
-  animation: scroll 40s linear infinite;
-  -webkit-animation: scroll 40s linear infinite;
-  width: 3600px;
+  animation: scroll 80s linear infinite;
+  width: 10800px;
 }
-.logosslider .slide {
-  width: 200px;
-}
-.logosslider .slide img {
-  width: 100%;
-}
-
 @keyframes scroll {
   0% {
-    -webkit-animation: translateX(0);
     transform: translateX(0);
   }
   100% {
-    -webkit-animation: translateX(-1800);
-    transform: translateX(-1800);
+    transform: translateX(-5400px);
   }
 }
+.logosslider .slide {
+  width: 200px;
+  margin-right: 30px;
+}
+
+.slide img {
+  width: 100%;
+}
+
 /* con parametros */
 /* sin parametros */
 .contactomain {
@@ -150,6 +150,9 @@ body {
   background: linear-gradient(45deg, #3f4852, #001011, #001011, #4e5864);
   background-size: 400% 400%;
   animation: gradient 12s ease infinite;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 @keyframes gradient {
@@ -183,7 +186,7 @@ header {
   justify-content: space-between;
   align-items: center;
   max-width: 100%;
-  margin: 0 auto;
+  margin-bottom: auto;
   padding: 2rem 10rem;
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 8px 20px 0 rgba(255, 255, 255, 0.1);
@@ -232,7 +235,7 @@ header .logo {
   justify-content: center;
   align-items: start;
   min-height: 60vh;
-  margin: 190px auto;
+  margin: 100px auto;
   height: 3px;
   width: 100%;
 }
@@ -326,8 +329,8 @@ p {
   font-family: "Montserrat", sans-serif;
   font-size: 2rem;
   font-weight: 300;
+  line-height: 30px;
   color: white;
-  margin: 50px 80px 50px 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -349,13 +352,13 @@ i {
 /* Footer */
 footer {
   width: 100%;
-  position: absolute;
-  bottom: 0;
+  height: 45px;
+  margin-top: auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 5px 180px;
   background-image: linear-gradient(to top, #e2ebf0 100%, #cfd9df 50%);
-  margin-top: auto;
 }
 footer p {
   color: #001011;
